--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8"/>
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="shortcut icon" href="social.png"/>
         <meta
             name="viewport"
